# Tanks

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build.yml
tanks/: credits.py  game.py  main.py  store.py
tanks/assets/maps/: gras1.txt  gras2.txt  gras3.txt  gras4.txt  gras5.txt  gras6.txt
tanks/assets/types/: minigun.json  sniper.json  sonic.json  speedy.json  tank.json
