[project]
name = "tanks"
version = "0.1.0"
description = "A small tank game for school made with pygame"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" },
    { name = "liam-hoyt", email = "liam.hoyt@gmail.com"},
    { name = "maariaan", email = "113891404+maariaan@users.noreply.github.com"},
    { name = "LeoHerzog", email = "leowhitelaker@gmail.com" }
]
dependencies = [
    "pygame==2.*",
    "whyslow==0.*",
    "black==24.*",
    "pillow==10.*",
    "pyinstaller==6.*",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
build = "pyinstaller tanks/main.py --onefile --noconsole --name tanks --add-data tanks/assets:tanks/assets"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tanks"]
